# ekron-realms

./: .gitignore  BUILD.md  CMakeLists.txt  CONTRIBUTING.md  Compile package FCL 1.0.1 Success.txt  Dockerfile  Jenkinsfile  Makefile  README.md  build.sh  create_cmake.sh  debuggermain.pas  docker-compose.yml  errors.txt  launcher.pas  makefile.fpc  new.md  realms-fpc.cfg  realms.dpr  realms.lpi  status.txt
.github/workflows/: build.yml  realms.yml
Projects/: DebuggerMain.lpi  DebuggerMain.lpr  DebuggerMain.lps  cmd.pas  debuggermain.pas  ekron.dpr  ekron.dproj  ekron.identcache  ekron.lpi  ekron.lps  ekron.pas  erd.dpr  erd.lpi  erd.lps  gamex86.dpr  gamex86.lpi  linkfiles50971.res  ppaslink.sh  quake2d.dpr  quake2d.dproj  quake2d.identcache  quake2d.lpi  quake2d.lps  quake2d.res  realms.cfg  realms.dpr  realms.lpi  realms.lpr  ref_gl.dpr  ref_gl.lpi  ref_soft.dpr  ref_soft.lpi
Projects/DebuggerMain.app/Contents/: Info.plist
Projects/DebuggerMain.app/Contents/MacOS/: DebuggerMain
Projects/__history/: ekron.dpr.~2~  ekron.dpr.~3~
Projects/backup/: DebuggerMain.lpi  DebuggerMain.lps  debuggermain.pas  ekron.dpr  ekron.lps  ekron.lps.bak  erd.dpr  erd.lpi.bak  erd.lps.bak  quake2d.dpr  quake2d.lpi  quake2d.lpi.bak  quake2d.lps  quake2d.lps.bak  realms.lpi
Projects/download/: gamedownloadform.pas  project1.lps  unit1.lfm  unit1.pas
Projects/download/backup/: gamedownloadform.pas  project1.lpr  project1.lps  unit1.pas
Projects/download/lib/x86_64-darwin/: project1.compiled  project1.or  unit1.ppu
Projects/lib/aarch64-darwin/: DebuggerMain.compiled  debuggermain.ppu
android/: settings.gradle.kts
backup/: DebuggerMain.lfm
client/backup/: cl_main.pas  cl_tent.pas  cl_view.pas  keys.pas
cmake/: FindSDL2.cmake  FindSDL3.cmake
cmake/Modules/: CMakeDeterminePascalCompiler.cmake  CMakePascalCompiler.cmake.in  CMakePascalInformation.cmake  FindFreePascal.cmake  FindKayte.cmake
ctf/: GameUnit.pas  g_local.dcu  g_local_64.dcu  g_local_64.pas
ctf/__history/: g_local.pas.~5~  g_local.pas.~6~  g_local_32.pas.~1~  g_local_32.pas.~2~  q_shared.pas.~4~  q_shared.pas.~6~
ctf/backup/: GameUnit.pas  q_shared.pas
engine/: arm64.asm  cl_pred.pas  ekron.pas  engine.lpk  enigne.lpk  enigne.pas  input.pas  keys.pas  menu.pas
engine/android/app/src/androidTest/java/com/example/realms/: ExampleInstrumentedTest.kt
engine/android/app/src/main/cpp/: CMakeLists.txt
engine/android/app/src/main/java/com/example/realms/: MainActivity.kt
engine/android/gradle/wrapper/: gradle-wrapper.properties
engine/client/: Client.pas  cl_main.pas  cl_tent.pas  cl_view.pas  rpi.asm
engine/ios/realms/realms Shared/: Shaders.metal
engine/ios/realms/realms tvOS/: GameViewController.swift
engine/ios/realms/realms.xcodeproj/xcuserdata/pedro.xcuserdatad/xcschemes/: xcschememanagement.plist
engine/linux/: OpenGL2.pas  in_linux.pas
engine/mac/: in_mac.pas  input.pas  net_udp.pas  sys_mac.pas
engine/sys/android/app/: build.gradle.kts
engine/sys/ios/realms/realms Shared/: Renderer.swift  ShaderTypes.h
engine/sys/ios/realms/realms iOS/: AppDelegate.swift
engine/sys/ios/realms/realms macOS/: AppDelegate.swift
engine/sys/ios/realms/realms.xcodeproj/: project.pbxproj
engine/sys/linux/: q_shlinux.pas  sys_linux.pas  vid_linux.pas  vid_so.pas
engine/sys/mac/: sys_mac.pas  vid_macos.pas
game/: CPas.pas  CVar.pas  Common.pas  Files.pas  delphi_cdecl_printf.pas  g_local.pas  game.lpk  platformasm.pas  q_shared.pas  q_shared_add.pas
game/Jedi/: opengl2.pas
game/backup/: m_flash.pas  q_shared.pas
game/ctf/: g_local.pas
game/ctf/__history/: g_local.pas.~4~  g_local_64.pas.~2~  q_shared.pas.~2~  q_shared.pas.~5~  q_shared.pas.~7~
game/qcommon/: CModel.pas  CPas.pas  Common.pas  PMoveUnit.pas  md4.pas
game/server/: sv_ccmds.pas
game/shop/: shopwindow.pas
game/ui/: HUD.kayte  map.kayte
game/vulkan/: vulkan.pas  vulkanutils.pas
ide/: project1.lpi  realms_ide.lpi  realms_ide.lpr  unit1.lfm  unit1.pas
ide/realms_ide.app/Contents/: Info.plist
ide/realms_ide.app/Contents/MacOS/: realms_ide
ios/realms/realms macOS/Base.lproj/: Main.storyboard
ios/realms/realms tvOS/: AppDelegate.swift
kayte/: kayte.pas
linux/: sys_linux.pas  vid_macos.pas
linux/backup/: snd_mac.pas.bak  sys_mac.pas.bak  vid_macos.pas  vid_macos.pas.bak
mac/: snd_mac.pas  sys_mac.pas  vid_mac.pas  vid_macos.pas
mac/backup/: net_udp.pas  q_shmac.pas  snd_mac.pas  snd_mac.pas.bak  sys_mac.pas  sys_mac.pas.bak  vid_macos.pas  vid_macos.pas.bak
macos/: sys_mac.pas
macos/backup/: sys_mac.pas.bak
qcommon/: CModel.pas  CPas.pas  CVar.pas  Cmd.pas  Common.pas  Delphi_cdecl_printf.pas  Files.pas  crc.pas  net_chan.pas  qfiles.pas
qcommon/backup/: CPas.pas  CVar.pas  Delphi_cdecl_printf.pas  Files.pas  net_chan.pas  qfiles.pas
server/: realmsstats.pas  sv_game.pas  sv_main.pas  sv_send.pas
shop/: CMakeLists.txt
shop/api/: CMakeLists.txt  main.cpp  products.json
shop/gui/: CMakeLists.txt  main.cpp
sys/android/app/src/test/java/com/example/realms/: ExampleUnitTest.kt
sys/ios/realms/realms iOS/: GameViewController.swift
sys/ios/realms/realms macOS/: GameViewController.swift
sys/ios/realms/realms.xcodeproj/project.xcworkspace/xcuserdata/pedro.xcuserdatad/: UserInterfaceState.xcuserstate
sys/linux/: sys_linux.pas
sys/mac/: q_shmac.pas  sys_mac.pas
vulkan/: vulkan.inc  vulkanrender.pas
vulkan/backup/: vulkanrender.pas
